#
# Makefile.am for the kvfile OpenRADIUS module
#
# $Log: not supported by cvs2svn $
# Revision 1.2  2007/10/06 09:38:25  ilya
# afile renamed to kvfile (key-value file)
#
# Revision 1.1.1.1  2007/10/05 11:28:26  michurin
# initial revision
#
#
#
sbin_PROGRAMS = kvfile
kvfile_SOURCES = kvfile.c args.c args.h lhash.c lhash.h log.c log.h loop.c loop.h parser.h parser.l table.c table.h
