sbin_PROGRAMS    = radmppe
radmppe_SOURCES  = args.c log.c loop.c main.c
radmppe_SOURCES += md5.c ms_mppe.c parse.c proc.c
radmppe_SOURCES += args.h log.h loop.h
radmppe_SOURCES += md5.h ms_mppe.h parse.h proc.h
# Extra files in the distribution
EXTRA_DIST       = MANIFEST autogen.sh
EXTRA_DIST      += test-d.req test-e.req
