sbin_PROGRAMS    = redisgw
redisgw_SOURCES  = args.c log.c loop.c main.c
redisgw_SOURCES += parse.c proc.c redis.c
redisgw_SOURCES += args.h log.h loop.h 
redisgw_SOURCES += parse.h proc.h redis.h
# Extra files in the distribution
EXTRA_DIST       = MANIFEST autogen.sh
EXTRA_DIST      += tests/error.req tests/get.req tests/incrby.req tests/incr.req tests/multiincr.req tests/set.req
