#
# Makefile.am for the sweetgw OpenRADIUS module
#
# Written by Ilya Etingof <ilya@glas.net>, 2006
#
# $Log: not supported by cvs2svn $
#
sbin_PROGRAMS    = sweetgw
INCLUDES         = -I@OPENRADIUS_INCLUDE_DIR@ -I@ABSWARE_INCLUDE_DIR@

sweetgw_SOURCES    = sweetgw.c
sweetgw_LDADD      = -lsweetuam
