bin_PROGRAMS = mradclient
mradclient_SOURCES = \
 abstract_data_acceptor.h \
 balancer.cpp \
 balancer.h \
 child_err_proxy.cpp \
 child_err_proxy.h \
 child_proxy.cpp \
 child_proxy.h \
 configuration.cpp \
 configuration.h \
 dispatcher.cpp \
 dispatcher.h \
 heaver.cpp \
 heaver.h \
 heaver_cluster.cpp \
 heaver_cluster.h \
 input_buffer.cpp \
 input_buffer.h \
 logger.cpp \
 logger.h \
 main.cpp \
 output_buffer.cpp \
 output_buffer.h \
 rad_package.cpp \
 rad_package.h

#
# ╨╧╠┼┌╬╧ ╫╥┼═╤ ╧╘ ╫╥┼═┼╬╔ ▐┼╦┴╘╪
#
# mradclient_CXXFLAGS = -Wall -Wextra -pedantic -Weffc++
#
